[gd_scene load_steps=3 format=3 uid="uid://bv8b36r8jxvyp"]

[ext_resource type="PackedScene" uid="uid://pjdtf3hky6c6" path="res://scenes/ui/CardPileViewer.tscn" id="1_f5yqa"]
[ext_resource type="Script" uid="uid://1hmndjp4ntwr" path="res://scenes/camp/RestScene.gd" id="1_lfst3"]

[node name="RestScene" type="PanelContainer"]
custom_minimum_size = Vector2(800, 500)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfst3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Odpočinek u táboráku"
horizontal_alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="HBoxContainer/LeftColumn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="HealButton" type="Button" parent="HBoxContainer/LeftColumn/OptionsContainer"]
layout_mode = 2
text = "Odpočinout si (+30% HP)"

[node name="UpgradeButton" type="Button" parent="HBoxContainer/LeftColumn/OptionsContainer"]
layout_mode = 2
text = "Vylepšit kartu"

[node name="CardPileViewer" parent="HBoxContainer/LeftColumn" instance=ExtResource("1_f5yqa")]
visible = false
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="LeaveButton" type="Button" parent="HBoxContainer/LeftColumn"]
layout_mode = 2
text = "Odejít"

[node name="RightColumn" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UpgradePreview" type="PanelContainer" parent="HBoxContainer/RightColumn"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/RightColumn/UpgradePreview"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/RightColumn/UpgradePreview/CenterContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
